--- a/public/css/main.css
+++ b/public/css/main.css
@@ -26,8 +26,17 @@ body {
   background-color: #F5F5F5;
 }
 
+.navbar {
+  background-color: #008080;
+}
+.navbar img {
+  height: 100px;
+  position: relative;
+  left: 50px;
+}
+
 .grid-container {
-  margin-top: 5%;
+  margin-top: 200px;
   display: grid;
   place-items: center;
 }
@@ -38,7 +47,7 @@ body {
   display: grid;
   place-items: center;
   grid-template-columns: 1fr 1fr;
-  width: 20%;
+  width: 400px;
 }
 .grid-container .systems button {
   width: 100%;
@@ -46,7 +55,7 @@ body {
 }
 .grid-container .input-container {
   background-color: #dfdfdf;
-  width: 20%;
+  width: 400px;
   box-shadow: rgba(0, 0, 0, 0.02) 0px 1px 3px 0px, rgba(27, 31, 35, 0.15) 0px 0px 0px 1px;
   padding: 25px 20px;
 }
