--- a/public/css/main.css
+++ b/public/css/main.css
@@ -15,11 +15,24 @@
   cursor: pointer;
   transition: all 0.1s ease-in;
 }
-.grid-container .input-container form button:hover, .grid-container .systems button:hover {
-  background-color: #00b3b3;
-}
 .grid-container .input-container form button:active, .grid-container .systems button:active {
   box-shadow: none;
+}
+
+.grid-container .results-chart .obese, .grid-container .results-chart .over, .grid-container .results-chart .healthy, .grid-container .results-chart .under {
+  display: grid;
+  place-items: center;
+  grid-template-columns: 1fr 1fr;
+  width: 100%;
+  margin: 15px 0;
+}
+
+.grid-container .results-chart .obese span, .grid-container .results-chart .over span, .grid-container .results-chart .healthy span, .grid-container .results-chart .under span {
+  color: #F5F5F5;
+  padding: 3px;
+  border-radius: 4px;
+  margin-right: 20px;
+  width: 90px !important;
 }
 
 body {
@@ -28,20 +41,26 @@ body {
 
 .navbar {
   background-color: #008080;
+  justify-items: start;
 }
 .navbar img {
   height: 100px;
   position: relative;
   left: 50px;
 }
+.navbar h1 {
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 30px;
+  text-align: center;
+  color: #F5F5F5;
+}
 
 .grid-container {
-  margin-top: 200px;
+  margin-top: 100px;
   display: grid;
   place-items: center;
-}
-.grid-container h1 {
-  font-weight: weight(bold);
 }
 .grid-container .systems {
   display: grid;
@@ -52,6 +71,9 @@ body {
 .grid-container .systems button {
   width: 100%;
   box-shadow: rgba(0, 0, 0, 0.02) 0px 1px 3px 0px, rgba(27, 31, 35, 0.15) 0px 0px 0px 1px;
+}
+.grid-container .systems button:hover {
+  background-color: #004d4d !important;
 }
 .grid-container .input-container {
   background-color: #dfdfdf;
@@ -82,4 +104,29 @@ body {
 .grid-container .input-container form button {
   box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
   margin-top: 20px;
+}
+.grid-container .results {
+  margin-top: 50px;
+  background-color: #dfdfdf;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
+  padding: 25px;
+  text-align: center;
+  width: 400px;
+}
+.grid-container .results-chart {
+  display: grid;
+  place-items: center;
+  width: 100%;
+}
+.grid-container .results-chart .under span {
+  background-color: rgb(255, 52, 255);
+}
+.grid-container .results-chart .healthy span {
+  background-color: rgb(0, 161, 0);
+}
+.grid-container .results-chart .over span {
+  background-color: rgb(255, 177, 32);
+}
+.grid-container .results-chart .obese span {
+  background-color: rgb(247, 75, 75);
 }/*# sourceMappingURL=main.css.map */
