increased font size of input fields

--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -137,6 +137,7 @@ body {
         outline: none;
         border: none;
         padding: 5px 10px;
+        font-size: 16px;
       }
 
       input::-webkit-outer-spin-button,
