--- a/public/css/main.css
+++ b/public/css/main.css
@@ -125,6 +125,7 @@ body {
   outline: none;
   border: none;
   padding: 5px 10px;
+  font-size: 16px;
 }
 .grid-container .input-container form input::-webkit-outer-spin-button,
 .grid-container .input-container form input::-webkit-inner-spin-button {
